2012-10-04  Tony Chang  <tony@chromium.org>

        Unreviewed, fixing expected results for a test that needs a new baseline.

        * platform/chromium/TestExpectations:
        * platform/efl/TestExpectations:
        * platform/gtk/TestExpectations:
        * platform/mac/TestExpectations:
        * platform/qt/TestExpectations:

2012-10-04  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r130396.
        http://trac.webkit.org/changeset/130396
        https://bugs.webkit.org/show_bug.cgi?id=98421

        This patch is causing crashes on 4 tests on Lion Debug and
        Mountain Lion Debug (Requested by jernoble on #webkit).

        * compositing/layer-creation/fixed-position-absolute-descendant-expected.txt: Removed.
        * compositing/layer-creation/fixed-position-absolute-descendant.html: Removed.

2012-10-04  Raphael Kubo da Costa  <raphael.kubo.da.costa@intel.com>

        [EFL] Fix r140403 by skipping the right test.

        * platform/efl/TestExpectations:

2012-10-04  Tony Chang  <tony@chromium.org>

        inline-flex baseline is sometimes wrong
        https://bugs.webkit.org/show_bug.cgi?id=96188

        Reviewed by Ojan Vafai.

        Add a new pixel test and mark the test as failing so we can get pixel results from the bots.

        * css3/flexbox/flexbox-baseline.html: Added.
        * platform/chromium-linux/css3/flexbox/flexbox-baseline-expected.png: Added.
        * platform/chromium-linux/css3/flexbox/flexbox-baseline-expected.txt: Added.
        * platform/chromium/TestExpectations:
        * platform/efl/TestExpectations:
        * platform/gtk/TestExpectations:
        * platform/mac/TestExpectations:
        * platform/qt/TestExpectations:
        * platform/win/TestExpectations:

2012-10-04  Raphael Kubo da Costa  <raphael.kubo.da.costa@intel.com>

        [EFL] Temporarily skip fast/xsl/xslt-missing-namespace-in-xslt.html.

        As bug 91009 shows, libxml 2.8.0 makes us produce a different test